--- a/BackyardParty.html
+++ b/BackyardParty.html
@@ -5,16 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Backyard Party</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
      <script src="main.js"></script>
 </head>
 <body>
-    <div class="jumbotron">
+    <div style="jumbotron">
+        <center>
         <h1 class="display-4">Backyard Party</h1>
+        
         <p class="lead"> Finding the best fun for everyone, at little to nothing.There's a party going on
             and it's right in your backyard!</p>
+        </center> 
+
         <hr class="my-4">
-        <div class="list-view column"></div>
+        <center>
+                <div class="list-view column"></div>
+        </center>
 </html>
